# mm

./: .gitignore  LICENSE  Makefile  README.md  mm.sln  mm.vcxproj  mm.vcxproj.filters
.github/workflows/: build.yml  ci.yml  release.yml
installer/: License.rtf  MouseMover.wixproj  MouseMover.wxs  build-installer.bat
legacy/: CMakeLists.txt  main.cpp  resource.h  resource.rc
scripts/: build-wsl.sh  setup-wsl.sh
src/: main.cpp  mm.manifest  resource.h  resource.rc
